# loco-mujoco

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
examples/training_examples/jax_amp/: conf.yaml
examples/training_examples/jax_gail/: conf.yaml
examples/training_examples/jax_rl/: conf.yaml
examples/training_examples/jax_rl_mimic/: conf.yaml
examples/tutorials/: 01_creating_mujoco_env.py  02_creating_mjx_env.py
loco_mujoco/: __init__.py
loco_mujoco/core/: README.md  mujoco_base.py
loco_mujoco/core/terrain/: rough.py
loco_mujoco/core/visuals/: viewer.py
loco_mujoco/environments/: base.py
loco_mujoco/environments/humanoids/: apptronik_apollo.py  atlas.py  base_skeleton.py  boostert1.py  fourier_gr1t2.py  myoskeleton.py  skeletons.py  talos.py  toddlerbot.py  unitreeG1.py  unitreeH1.py  unitreeH1_mjx.py  unitreeH1v2.py  unitreeH1v2_mjx.py
loco_mujoco/environments/quadrupeds/: anymal_c.py  bd_spot.py  unitreeA1.py  unitreeGo2.py
loco_mujoco/smpl/: retargeting.py
loco_mujoco/utils/: myomodel_init.py
tests/: compute_expected_values.py  test_domain_randomizer.py  test_goals.py  test_initial_state_handler.py  test_mjx.py  test_observation.py  test_reward.py  test_trajectory.py
tests/test_conf/: fixtures.py
