[build-system]
requires = ["setuptools", "wheel", "wget"]

[project]
name = "loco-mujoco"
dependencies = [
    "numpy>=0.2.4.2,<2.5.0",
    "scipy>=1.17.0,<1.28.0",
    "mujoco>=3.4.0,<3.5.0",    # todo: MjSpec API changed in 3.3.0, check why find functions are not supported anymore (no info in Mujoco changelog given)
    "mujoco-mjx>=3.4.0,<3.5.0",
    "hydra-core>=1.3.2,<1.4.0",
    "jax>=0.9.0,<0.10.0",
    "flax>=0.12.3,<0.13.0",
    "orbax>=0.1.9,<0.2.0",
    "distrax>=0.1.7,<0.2.0",
    "metrx>=0.1.0,<0.2.0",
    "gymnasium>=1.2.3,<1.3.0",
    "pyyaml>=6.0.3,<6.1.0",
    "opencv-python>=4.13.0.90,<4.14.0.0",
    "wget>=3.2,<3.3",
    "gitpython>=3.1.46,<3.2.0",
    "datasets>=4.5.0,<4.6.0",
    "huggingface_hub>=1.3.5,<1.4.0"]

requires-python = ">=3.10"
authors = [{name="Firas Al-Hafez", email="fi.alhafez@gmail.com"}]
maintainers = [{ name="Firas Al-Hafez", email="fi.alhafez@gmail.com"}]
description = 'Imitation learning benchmark focusing on complex locomotion tasks using MuJoCo.'
readme = "README.md"
license = { file= "LICENSE" }
keywords = ["Imitation Learning", "Reinforcement Learning", "Locomotion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
# To install SMPL, you need to accept the license as described here https://github.com/vchoutas/smplx
smpl = [
    "torch",
    "tqdm",
    "smplx @ git+https://github.com/ZhengyiLuo/smplx",
    "joblib"
]

[project.urls]
Homepage = "https://github.com/robfiras/loco-mujoco"
Repository = "https://github.com/robfiras/loco-mujoco"
Issues = "https://github.com/robfiras/loco-mujoco/issues"

[project.scripts]
loco-mujoco-download = "loco_mujoco.utils:download_all_datasets"
loco-mujoco-download-real = "loco_mujoco.utils:download_real_datasets"
loco-mujoco-download-perfect = "loco_mujoco.utils:download_perfect_datasets"
loco-mujoco-myomodel-init = "loco_mujoco.utils:fetch_myoskeleton"
loco-mujoco-myomodel-clear = "loco_mujoco.utils:clear_myoskeleton"
loco-mujoco-set-smpl-model-path = "loco_mujoco.utils:set_smpl_model_path"
loco-mujoco-set-amass-path = "loco_mujoco.utils:set_amass_path"
loco-mujoco-set-conv-amass-path = "loco_mujoco.utils:set_converted_amass_path"
loco-mujoco-set-lafan1-path = "loco_mujoco.utils:set_lafan1_path"
loco-mujoco-set-conv-lafan1-path = "loco_mujoco.utils:set_converted_lafan1_path"
loco-mujoco-set-all-caches = "loco_mujoco.utils:set_all_caches"
